# xqb

./: .gitignore  README.md  pyproject.toml
xqb/: manage.py
xqb/core/: middleware.py
xqb/notebooks/: models.py  urls.py  views.py
xqb/notebooks/static/notebooks/css/: notebook_confirm_delete.css  notebook_form.css  notebook_list.css
xqb/notebooks/templates/notebooks/: notebook_confirm_delete.html  notebook_form.html  notebook_list.html  notebook_update_form.html
xqb/notes/: forms.py  models.py  urls.py  views.py
xqb/notes/static/notes/css/: note_confirm_delete.css  note_detail.css  note_form.css  note_list.css  search_box.css  tags_input.css
xqb/notes/static/notes/js/: searchBox.js  searchNotes.js  showNote.js  (+2 more)
xqb/notes/templates/notes/: note_confirm_delete.html  note_detail.html  note_form.html  note_list.html  note_update_form.html  searched_notes.html
xqb/notes/templatetags/: get_note_ago.py
xqb/pages/templates/pages/: home.html
xqb/static/css/: base.css  ffolders.css  sidebar.css
xqb/static/js/: sidebar.js
xqb/templates/: base.html  sidebar.html
xqb/users/: forms.py  models.py  urls.py  views.py
xqb/users/templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_failed.html  registration_complete.html  registration_form.html
xqb/users/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt
xqb/users/templates/users/: user_form.html
xqb/xqb/: asgi.py  settings.py  urls.py  wsgi.py
(+4 files in other folders)
